Fixed deprecated methods;